name: dartagnan
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable dartagnan
  main-is: Dartagnan.hs
  buildable: True
  build-depends:
      base -any,
      containers -any,
      mtl -any
  other-modules:
      CodeGenContikiCM5000
      CodeGenContikiIotLab
      Declarations
      DeviceManagement
      Duplicates
      ExampleAutomation
      Examples
      GraphDraw
      MemoryManagement
      PaperExamples
      Simulator
      StreamStruct
      TypeChecker
      Utils
      Val
